--- a/src/main/resources/templates/community/writingList.html
+++ b/src/main/resources/templates/community/writingList.html
@@ -1,10 +1,24 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
+<!DOCTYPE HTML>
+<html xmlns:th="http://www.thymeleaf.org">
 <body>
-
+<div class="container">
+    <div>
+        <table>
+            <thead>
+            <tr>
+                <th>#</th>
+                <th>이름</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr th:each="writing : ${writings}">
+            <!-- 모델에 담은 writings 객체를 가져와서 하나씩 꺼내는 것-->
+                <td th:text="${writing.title}"></td>
+                <td th:text="${writing.content}"></td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
+</div> <!-- /container -->
 </body>
 </html>
